--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_native_splash: ^2.4.0
   flutter_screenutil: ^5.9.1
   intl_phone_field: ^3.2.0
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
