--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_screenutil: ^5.9.1
   intl_phone_field: ^3.2.0
   dotted_border: ^2.1.0
+  pretty_qr_code: ^3.3.0
+  readmore: ^3.0.0
 
 dev_dependencies:
   flutter_test:
