--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   bloc: ^8.1.4
   phone_input: ^1.0.0
   toastification: ^2.0.0
+  image_picker: ^1.1.1
+  path_to_regexp: ^0.4.0
 
 dev_dependencies:
   flutter_test:
