--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   toastification: ^2.0.0
   image_picker: ^1.1.1
   path_to_regexp: ^0.4.0
+  intl: ^0.19.0
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
