--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   path_to_regexp: ^0.4.0
   intl: ^0.19.0
   http_parser: ^4.0.2
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
