--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: todo_app
-description: "A new Flutter project."
+name: tasky
+description: "Multi task application."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -56,6 +56,9 @@ dependencies:
   intl: ^0.19.0
   http_parser: ^4.0.2
   flutter_staggered_animations: ^1.1.1
+  libphonenumber: ^2.0.2
+  qr_code_scanner: ^1.0.1
+  skeletonizer: ^1.1.2+1
 
 dev_dependencies:
   flutter_test:
